--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,3 +23,10 @@
   {% endif %}
   </div>
 {% endif %}
+
+</div> 
+
+<div style="margin-top: 20px;">
+  <h4>Visitor Map</h4>
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=6gB53Hr_GJ3lWZi9FFSmcuCsQKmtBrh2VoZUYy2CnPs&cl=ffffff&w=a"></script>
+</div>
